--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,28 @@
 <body>
     Hello thank you for using my extension.<br>&mdash;<br>
-    i wanted sum keyboard shortcuts and visual fixes to make it a little easier to navigate at speed.
-    if you like these too that's awesome :) email me if there's anything wrong with it or if you don't like something or have some minor complaint that i could maybe mitigate.
-    
-    <br><a href="https://github.com/kaiwildberger">https://github.com/kaiwildberger</a>
+    i wanted sum keyboard shortcuts and visual fixes improve qol a coach/tab staff
+    if you like these too that's awesome :) email me if you don't like something or have some minor complaint that i could maybe mitigate.
+    <br><a href="https://github.com/kaiwildberger">https://github.com/kaiwildberger</a><br><br>
+    feature list:<br>
+    <li>spacebar focuses school search box<br></li>
+    <li>copy mailto:email to clipboard<br></li>
+    <li>link to event/round schemats in Tab Status screen<br></li>
+    <li>competitor codes shouldn't be squished<br></li>
+    <li>judge chart:<br></li>
+    <li class="block">tab title is Judge Chart<br></li>
+    <li class="block">more readable in narrow windows<br></li>
+    <li class="block">school code takes up an appropriate amount of space<br></li>
+    <li>entries tab defaults to schools<br></li>
+    <li>tabbing tab defaults to status<br></li>
+    <li>"Codes to Watch" in pairings view<br></li>
     <!-- <form>
         <label>Set judge chart page title <input type="checkbox" id="judgechart_title"/></label>
         <button type="submit">save</button>
     </form> -->
     <script src="popup.js"></script>
+    <style>
+        .block { margin:0 0 0 24px; }
+    </style>
 </body>
 <style>
     body {
